--- a/src/app/lists/favorites/favorites.component.css
+++ b/src/app/lists/favorites/favorites.component.css
@@ -4,3 +4,8 @@
   grid-template-columns: repeat(auto-fill, minmax(150px, 150px));
   gap: 32px;
 }
+@media (max-width: 991px) {
+  .list {
+    grid-template-columns: repeat(auto-fill, minmax(70px, 74px));
+  }
+}
