--- a/src/app/swiper/swiper.component.css
+++ b/src/app/swiper/swiper.component.css
@@ -7,6 +7,13 @@ swiper-container {
   width: 660px;
   padding: 20px;
 }
+
+@media (max-width: 800px) {
+  swiper-container {
+    width: 100%;
+    padding: 20px;
+  }
+}
 /* swiper-slide  app-movie-card{
   max-width: 120px;
 } */
