--- a/src/app/swiper/swiper.component.html
+++ b/src/app/swiper/swiper.component.html
@@ -4,22 +4,27 @@
   prevEl: 'prev-btn',
   nextEl: 'next-btn'
 }"
- pagination = "true"
- [slidesPerView]= "4"
- [slidesPerGroup]= "4"
- speed="1000"
- >
+[slidesPerView]= "4"
+[slidesPerGroup]= "4"
+speed="1000"
+>
+<!-- pagination = "true" -->
  <!-- [spaceBetween]="25" -->
-  <swiper-slide  *ngFor="let movie of SliderMovies">
+  <swiper-slide  *ngFor="let movieEl of SliderMovies">
     <app-movie-card
-    [movie]="movie"
+    [movie]="movieEl"
     [watchedButton]="true"
     [watchlistButton]="true"
     [favoriteButton]="true"
     (mouseenter)="showImage($event)"
     (mouseleave)="onMouseLeave()"
+    [watchedStatus]="watchedIds && watchedIds.includes(movieEl.id) ? true : false"
+    [favoriteStatus]="favoriteIds && favoriteIds.includes(movieEl.id) ? true : false"
+    [watchlistStatus]="watchlistIds && watchlistIds.includes(movieEl.id) ? true : false"
     ></app-movie-card>
   </swiper-slide>
   <div class="prev-btn" prevEl></div>
   <div class="next-btn" nextEl></div>
 </swiper-container>
+
+{{ watchedIds }}
