auth token expiration added!

--- a/src/app/home/movies-list/movies-list.component.css
+++ b/src/app/home/movies-list/movies-list.component.css
@@ -33,7 +33,10 @@
   background-image: linear-gradient(90deg, rgb(17, 20, 24) 0px, rgba(17, 20, 24, 0.98) 0.97%, rgba(17, 20, 24, 0.94) 2.07833%, rgba(17, 20, 24, 0.88) 3.29667%, rgba(17, 20, 24, 0.8) 4.60167%, rgba(17, 20, 24, 0.71) 5.96667%, rgba(17, 20, 24, 0.61) 7.365%, rgba(17, 20, 24, 0.51) 8.77167%, rgba(17, 20, 24, 0.4) 10.16%, rgba(17, 20, 24, 0.29) 11.505%, rgba(17, 20, 24, 0.2) 12.78%, rgba(17, 20, 24, 0.12) 13.9583%, rgba(17, 20, 24, 0.06) 15.0167%, rgba(17, 20, 24, 0.02) 15.9283%, rgba(17, 20, 24, 0) 16.6667%, rgba(17, 20, 24, 0) 83.3333%, rgba(17, 20, 24, 0.02) 84.0717%, rgba(17, 20, 24, 0.06) 84.9833%, rgba(17, 20, 24, 0.12) 86.0417%, rgba(17, 20, 24, 0.2) 87.22%, rgba(17, 20, 24, 0.29) 88.495%, rgba(17, 20, 24, 0.4) 89.84%, rgba(17, 20, 24, 0.51) 91.2283%, rgba(17, 20, 24, 0.61) 92.635%, rgba(17, 20, 24, 0.71) 94.0333%, rgba(17, 20, 24, 0.8) 95.3983%, rgba(17, 20, 24, 0.88) 96.7033%, rgba(17, 20, 24, 0.94) 97.9217%, rgba(17, 20, 24, 0.98) 99.03%, rgb(17, 20, 24)), linear-gradient(0deg, rgb(17, 20, 24) 0px, rgb(17, 20, 24) 21.4815%, rgba(17, 20, 24, 0.98) 23.637%, rgba(17, 20, 24, 0.94) 26.1%, rgba(17, 20, 24, 0.88) 28.8074%, rgba(17, 20, 24, 0.8) 31.7074%, rgba(17, 20, 24, 0.71) 34.7407%, rgba(17, 20, 24, 0.61) 37.8481%, rgba(17, 20, 24, 0.51) 40.9741%, rgba(17, 20, 24, 0.4) 44.0593%, rgba(17, 20, 24, 0.29) 47.0481%, rgba(17, 20, 24, 0.2) 49.8815%, rgba(17, 20, 24, 0.12) 52.5%, rgba(17, 20, 24, 0.06) 54.8519%, rgba(17, 20, 24, 0.02) 56.8778%, rgba(17, 20, 24, 0) 58.5185%);
 }
 
-
+:host ::ng-deep .list app-movie-card img {
+  min-height: 120px;
+  width: 100%;
+}
 
 
 .list {
@@ -54,16 +57,11 @@
   .backdrop {
     height: 40% !important;
   }
-  :host ::ng-deep .list app-movie-card img {
-    min-height: 120px;
-    width: 60%;
+  :host ::ng-deep .list app-movie-card .movie-card{
+    width: 90px;
   }
 }
 
-:host ::ng-deep .list app-movie-card img {
-  min-height: 120px;
-  width:90%;
-}
 
 ul {
   list-style: none;
@@ -87,6 +85,12 @@ ul {
   /* in silder only */
   width: 150px;
 }
+/* @media (max-width: 991px) {
+  :host ::ng-deep .list app-movie-card .movie-card{
+    width: 90px;
+  }
+} */
+
 .slider i {
   position: absolute;
   font-size: 26px;
