--- a/src/app/home/movies-list/movies-list.component.html
+++ b/src/app/home/movies-list/movies-list.component.html
@@ -7,7 +7,6 @@
   </div>
   <div class="page-holder">
     <!-- #Trending Silder - Start -->
-    <h3>Trending</h3>
     <!-- <hr> -->
     <!-- <div class="sliders">
       <i class="fa-solid fa-chevron-left left" (click)="slideLeft()"></i>
@@ -27,6 +26,7 @@
         </ul>
       </div>
     </div> -->
+    <!-- <h3>Trending</h3> -->
     <app-swiper
     [movies]="trendingMoives"
     (backdrop)="changeBackdrop($event)"
