--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .page-holder {
   position: relative;
   width: 100vw;
-  height: 85vh;
+  /* height: 85vh; */
   top: 0;
   display: flex;
   left: 0px;
@@ -25,4 +25,9 @@
   justify-content: center;
   /* left: 230px; */
 
+}
+@media (max-width: 767px) {
+  .page-holder {
+    top: 50px;
+  }
 }
