--- a/src/app/home/movies-list/movie-card/movie-card.component.css
+++ b/src/app/home/movies-list/movie-card/movie-card.component.css
@@ -17,12 +17,37 @@ img {
 @media (max-width: 933px) {
   img {
     min-height: auto;
-    width: 62%;
+    width: 80%;
+  }
+}
+@media (max-width: 767px) {
+  img {
+    min-height: auto;
+    width: 63%;
+  }
+}
+@media (max-width: 468px) {
+  img {
+    min-height: auto;
+    width: 50%;
+  }
+}
+@media (max-width: 397px) {
+  img {
+    min-height: auto;
+    width: 44%;
   }
 }
 
 .rating {
   position: absolute;
+  background-color: #1d232aba;
+  padding: 0 6px 2px 6px;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  width: 35px;
+  /* transform: skewX(-43deg) rotate(0deg); */
 }
 /* .poster { */
   /*
@@ -42,7 +67,7 @@ img {
   left: 50%;
   transform: translate(-50%, 0);
   justify-content: space-evenly;
-  z-index: 100;
+  z-index: 10;
   /* display: flex; */
   display: none;
 }
@@ -104,7 +129,7 @@ button .blue-color {
   background-color: rgba(0, 0, 0, 0.461);
   position: absolute;
   top: 0;
-  z-index: 200;
+  z-index: 20;
 }
 
 .disable {
