--- a/src/app/lists/watched/watched.component.html
+++ b/src/app/lists/watched/watched.component.html
@@ -8,6 +8,8 @@
   [favoriteButton]="true"
   [deleteButton]="true"
   [componentName]="WATCHED"
+  [favoriteStatus]="favoriteIds && favoriteIds.includes(movieEl.id) ? true : false"
+  [watchlistStatus]="watchlistIds && watchlistIds.includes(movieEl.id) ? true : false"
   >
   </app-movie-card>
 </div>
