--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,13 +9,14 @@ form {
   width: 350px;
   padding: 40px;
   position: relative;
-  top: 200px;
+  top: 20px;
   border-radius: 15px;
+  background-color: #1d232a;
 }
 
 .btn {
   width: 100%;
-  background-color: #1d232a;
+  background-color: #111418;
   color: white;
   margin-top: 20px;
 }
