--- a/src/app/movie-details-page/movie-details-page.component.css
+++ b/src/app/movie-details-page/movie-details-page.component.css
@@ -345,6 +345,9 @@ button .blue-color {
   }
 }
 @media (max-width: 767px) {
+  .backdrop-holder {
+    top: -215px;
+  }
   .movie-info {
     top: 60px;
     flex-direction: column;
