--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,3 +31,60 @@
     top: 50px;
   }
 }
+/* Footer */
+.site-footer {
+  background-color: #333;
+  color: #fff;
+  padding: 50px 0;
+
+}
+
+.site-footer h3 {
+  color: #fff;
+}
+
+.site-footer p {
+  color: #ccc;
+}
+
+.site-footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.site-footer ul li {
+  margin-bottom: 10px;
+}
+
+.site-footer ul li a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+.site-footer ul li a:hover {
+  color: #fff;
+}
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.social-icons li:last-child {
+  margin-right: 0;
+}
+
+.social-icons li a {
+  color: #ccc;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.social-icons li a:hover {
+  color: #fff;
+}
