--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,8 +25,8 @@
 
 }
 .logo {
-color: white;
-cursor: pointer;
+  color: white;
+  cursor: pointer;
 }
 .search-holder {
   display: flex;
@@ -41,6 +41,7 @@ cursor: pointer;
 }
 .bar-holder .search-icon {
   color: #5c6179 !important;
+  cursor: pointer;
 }
 .search-icon::placeholder {
   color: #5c6179 !important;
@@ -92,8 +93,8 @@ cursor: pointer;
   background-color: transparent !important;
 }
 .style-2 > .container > .links {
-  left: 42% !important;
-  top: 22px !important;
+  left: 42%;
+  top: 22px;
 }
 .style-2 > .container > .links::after {
   display: none !important;
@@ -144,17 +145,30 @@ a {
 .links .link a:hover {
   color: rgb(77, 201, 255);
 }
+@media (max-width: 486px) {
+  .style-2 > .container > .links {
+    left: 35.5% ;
+    top: 190px ;
+  }
+}
+@media (max-width: 768px) {
+  .style-2 > .container > .links {
+    top: 220px;
+  }
+}
 @media (min-width: 992px) {
-  .links {
+  .style-2 > .container > .links {
     display: none;
   }
 }
-@media (max-width: 800px) {
-  .links {
+@media (max-width: 992px) {
+  /* .links {
     top: 100px;
-  }
+  } */
   .search-bar {
     display: none;
+    width: 150px;
+    height: 35px !important;
   }
   .bar-holder {
     background-color: transparent
